# virus-spreading-model

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Country.cpp  Country.h  Doxyfile  Grid.cpp  Grid.h  LICENSE  Point.cpp  Point.h  README.md  World.cpp  World.h  main.cpp  set_countries_anchor_point.cpp
config/: input.json
profiling/: profiling.py  results.csv
src/: Cell.cpp  Cell.h  Contact.cpp  Contact.h  Country.cpp  Country.h  Grid.cpp  Grid.h  Individual.cpp  Individual.h  Infected.cpp  Infected.h  InputParser.cpp  InputParser.h  JsonHandler.cpp  JsonHandler.h  MpiHandler.cpp  MpiHandler.h  Point.cpp  Point.h  World.cpp  World.h  helper.cpp  helper.h  main.cpp
